exports[`Scatterplot.js should render the clip path 1`] = `
<g
  className="scatterplot"
  clipPath="my-clip-path"
  transform="translate(0,0)" />
`;

exports[`Scatterplot.js should take stubbed data and do basic rendering 1`] = `
<g
  className="scatterplot"
  clipPath={undefined}
  transform="translate(0,0)" />
`;

exports[`Scatterplot.js should take stubbed data repositions based on padding 1`] = `
<g
  className="scatterplot"
  clipPath={undefined}
  transform="translate(10,10)" />
`;
